Added utils.py with get_agent() function to construct a ReAct and Function calling agent

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,12 @@ name = "pypi"
 pandas = "*"
 ipykernel = "*"
 openpyxl = "*"
+langchain = "*"
+langchain_community = "*"
+langchain-openai = "*"
+chainlit = "*"
+python-dotenv = "*"
+numexpr = "*"
 
 [dev-packages]
 
