Attempted to solve algebraic expression problems using LLMSymbolicMathChain and Sympy. Needs work on the Reasoning Tool & Agent perhaps to use the new symbolic math tool where appropriate

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ langchain-openai = "*"
 chainlit = "*"
 python-dotenv = "*"
 numexpr = "*"
+langchain-experimental = "*"
+sympy = "*"
 
 [dev-packages]
 
